[package]
name = "dumbgame"
version = "0.1.0"
authors = ["W. Brian Gourlie <bgourlie@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quicksilver = {git = "https://github.com/bgourlie/quicksilver.git", branch="fix-collisions-feature2", default-features = false, features = ["collisions"]}
ncollide2d = "0.20"
nalgebra = "0.18"
legion = {git = "https://github.com/TomGillen/legion.git", default-features = false}

[profile.release]
opt-level = 3
lto = true
debug = true
debug-assertions = false