[package]
name = "dumbgame"
version = "0.1.0"
authors = ["W. Brian Gourlie <bgourlie@gmail.com>"]
edition = "2018"

[dependencies]
quicksilver = {version = "0.3.19", default-features = false, features = ["collisions"]}
ncollide2d = "0.20"
nalgebra = "0.18"
legion = {git = "https://github.com/TomGillen/legion.git", default-features = false}
custom_derive = "0.1.7"
newtype_derive = "0.1.6"

[profile.release]
opt-level = 3
lto = true
debug = true
debug-assertions = false